[metadata]
name = metadata-check
author = Irina Colgiu
author-email = ic4@sanger.ac.uk
summary = Package to check the metadata of a file in iRODS and compare it with the file header and information extracted from Seqscape.
license = GPL
description-file = README.md
requires-python = 3.5
classifier =
Development Status :: 1 - Alpha
Environment :: Console
Intended Audience :: Developers
Operating System :: OS Independent
Programming Language :: Python
[files]
packages =
	mcheck
